@@ -14,7 +14,7 @@ SUBDIRS = po
 
 INCLUDES = -I. -I$(top_srcdir)
 
-noinst_HEADERS = findme.h poptint.h system.h
+noinst_HEADERS = poptint.h system.h
 
 noinst_PROGRAMS = test1 test2 test3
 test1_SOURCES = test1.c
@@ -39,7 +39,7 @@ include_HEADERS = popt.h
 usrlibdir = $(libdir)
 usrlib_LTLIBRARIES = libpopt.la
 
-libpopt_la_SOURCES = popt.c findme.c poptparse.c poptconfig.c popthelp.c poptint.c
+libpopt_la_SOURCES = popt.c poptparse.c poptconfig.c popthelp.c poptint.c
 libpopt_la_LDFLAGS = -no-undefined @LTLIBINTL@
 
 if HAVE_LD_VERSION_SCRIPT
